Parte 3 - Refinando e refatorando projeto, uso de inspetor de código

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">EstudoAlura</string>
+    <string name="nomeEdtFormulario">Nome</string>
+    <string name="telefoneEdtFormulario">Telefone</string>
+    <string name="emailEdtFormulario">E-mail</string>
+    <string name="salvar">Salvar</string>
+    <string name="remover">Remover</string>
 </resources>
